# txsim

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
scSTsim/: __init__.py
scSTsim/metrics/: __init__.py  coexpression_similarity.py  metric1.py  metric2.py
scSTsim/preprocessing/: __init__.py  _imaging.py  _normalization.py
tests/: README.md  conftest.py  test_quality_metrics.py  test_similarity_metrics.py
tests/_data/: adata_sp_simulated.h5ad  generate_data.py
txsim/: __init__.py
txsim/data_utils/: __init__.py  convert.py  quantities.py  subset.py  validate.py
txsim/local/: __init__.py  _analysis_wrappers.py  _cells_based.py  _metrics.py  _self_consistency_metrics.py  _spots_based.py  _utils.py  local_measurements.py  local_metrics.py
txsim/metrics/: __init__.py  _cell_statistics.py  _celltype_proportions.py  _coembedding.py  _coexpression_similarity.py  _combined.py  _efficiency.py  _expression_similarity_between_celltypes.py  _gene_set_coexpression.py  _general_coembedding  _general_coembedding.py  _jensen-shannon_divergence.py  _jensen_shannon_distance.py  _local_measurements.py  _main_inter_diff_expression_correlation.py  _negative_marker_purity.py  _rand_index.py  _relative_expression_similarity.py  _relative_pairwise_celltype_expression.py  _relative_pairwise_gene_expression.py  _uniform_cell.py  _util.py  _utils.py  celltype_proportions.py  coexpression_similarity.py  efficiency.py  efficiency_deviation.py  expression_similarity_between_celltypes.py  final_relative_gene_expression_metric.ipynb  gene_efficiency_metric_formula.ipynb  knn_mixing_metric_formula.ipynb  local_measurements.py  metric2.py  negative_marker_purity.py  (+9 more)
(+17 files in other folders)
