[build-system]
requires = [
    "setuptools",
    "wheel",
    "omnipath",
    "squidpy",
    "alphashape",
    "descartes",
    "cellpose",
    "shapely",
    "scikit-image",
    "planktonspace",
    "geopandas",
    "rasterio"
]
build-backend = "setuptools.build_meta"


[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources",
    "ignore::DeprecationWarning:xarray_schema"
]